--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "scripts": {
-        "docs:dev": "vuepress dev docs",
-        "docs:build": "vuepress build docs"
+        "src:dev": "vuepress dev src",
+        "src:build": "vuepress build src"
     },
     "devDependencies": {
         "vuepress": "^1.0.3",
