--- a/src/.vuepress/public/manifest.json
+++ b/src/.vuepress/public/manifest.json
@@ -1,8 +1,14 @@
 {
-    "name": "HackerWeb",
-    "short_name": "HackerWeb",
-    "start_url": ".",
+    "name": "VuePress",
+    "short_name": "VuePress",
+    "start_url": "",
     "display": "standalone",
     "background_color": "#fff",
-    "description": "A simply readable Hacker News app."
+    "description": "A simply readable Hacker News app.",
+    "icons": [{
+        "src": "images/touch/homescreen48.png",
+        "sizes": "48x48",
+        "type": "image/png"
+      }
+    ]
 }
