--- a/src/.vuepress/public/manifest.json
+++ b/src/.vuepress/public/manifest.json
@@ -1,14 +1,20 @@
 {
-    "name": "VuePress",
-    "short_name": "VuePress",
-    "start_url": "",
-    "display": "standalone",
-    "background_color": "#fff",
-    "description": "A simply readable Hacker News app.",
-    "icons": [{
-        "src": "images/touch/homescreen48.png",
-        "sizes": "48x48",
-        "type": "image/png"
+    "short_name": "Vuepress",
+    "name": "Vuepress",
+    "icons": [
+      {
+        "src": "/images/icons-192.png",
+        "type": "image/png",
+        "sizes": "192x192"
+      },
+      {
+        "src": "/images/icons-512.png",
+        "type": "image/png",
+        "sizes": "512x512"
       }
-    ]
-}
+    ],
+    "start_url": "/",
+    "background_color": "#3367D6",
+    "display": "standalone",
+    "theme_color": "#3367D6"
+  }
