--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -3,17 +3,17 @@
     "name": "Vuepress",
     "icons": [
         {
-            "src": "/images/icons-192.png",
-            "type": "image/png",
-            "sizes": "192x192"
+            "src": "/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
         },
         {
-            "src": "/images/icons-512.png",
-            "type": "image/png",
-            "sizes": "512x512"
+            "src": "/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
     ],
-    "start_url": "/",
+    "start_url": "/test-vuepress/",
     "background_color": "#3367D6",
     "display": "standalone",
     "theme_color": "#3367D6"
